fixed space on sides of card images on small screen

--- a/style.scss
+++ b/style.scss
@@ -347,7 +347,7 @@ html{
 
 
     @media only screen and (max-width: 850px){
-        margin: 0 -2.5%;
+        margin: 0 -2.6%;
     }
     &__img{
         transition: box-shadow .2s ease-in;
